src/pmt/css/PreferencesManagementTool.css
/* ... */
.flc-uiOptions-preview-per-setting-cursor {
	font-size: 2em;
}

/*
	Style for "Add to my preferences" star font icon
*/
.fl-adjuster-icons-additional {
	font-family: 'font-icons-sept-3';
}

.addToMyPreferencesStar:before {
	content: "\e000";
}

.addToMyPreferencesStar {
	margin-left: calc(330px - 1em);
    margin-top: 0.5em;
    color: #6b7281;
  	position: absolute;
}

input:checked + .addToMyPreferencesStar {
    color: #fae80b;
}

.addToMyPreferencesLabel {
	height: 1.1em !important;
    position: absolute;
    width: 1.1em !important;
    cursor: pointer;
	margin-left: calc(330px - 1em);
    margin-top: 0.5em;
    font-size: 1em !important;
}

/*
	Style for tooltips
*/
[title]:after{
	background-color: #f4e413;
	padding:5px;
	position:absolute;
	left:-9999px;
	opacity:0;
	bottom:100%;
	white-space:nowrap;
	-webkit-transition:0.25s linear opacity;
	border: 1px solid black;
    border-radius: 3px 3px 3px 3px;
    font-size: 0.8em;
}
[title]:hover:after{
	left:0px;
	opacity:1;
}

.addToMyPreferencesLabel[title]:after {
	content:attr(tooltip-unchecked);
}

input:checked + .addToMyPreferencesStar + .addToMyPreferencesLabel[title]:after {
	content:attr(tooltip-checked);
}

.flc-uiOptions-magnifierPosition-label[title] {
	position:relative;
}

.flc-uiOptions-magnifierPosition-label[title]:after {
	content: attr(tooltip);
	line-height: 1em !important;
	font-size: 1em;
	white-space:normal;
}

/*
	Style for contrast
*/
.flc-uiOptions-contrast-theme {
	color: yellow;
	background-color: black;
}

.flc-uiOptions-default-theme {
	color: black;
	background-color: #D3DFDF;
}

.flc-uiOptions-contrast-theme .headerImage {
	background-color: black !important;
	color: yellow !important;
}

.flc-uiOptions-contrast-theme .headerTitle {
	background-color: transparent !important;
	color: black !important;
}

.flc-uiOptions-contrast-theme .addToMyPreferencesLabel {
	background-color: transparent !important;
}

.flc-uiOptions-contrast-theme .addToMyPreferencesStar {
	background-color: yellow !important;
	color: black !important;
}

.flc-uiOptions-contrast-theme input:checked + .addToMyPreferencesStar {
	background-color: black !important;
	color: yellow !important;
}

